Hamburguer menu (CSS Fixes): Overflow list items fixed and z-index to 1

--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -6,6 +6,7 @@ nav#header {
     height: 90px;
     background-color: var(--primary-color);
     align-items: center;
+    z-index: 1;
 }
 
 nav h3 {
@@ -82,19 +83,17 @@ img#logo-header {
 }
 
 #links-hamburguer li {
-    visibility: hidden;
+    display: none;
     text-align: right;
     padding: 0.6rem;
-    width: 100%;
-    min-width: 300px;
-    right: 50px;
+    width: 300px;
     cursor: default;
 }
 
 #links-hamburguer li a{
     text-decoration: none;
     font-size: 1.1rem;
-    padding: 1rem;
+    padding: 0.3rem;
     color: var(--primary-color);
 }
 
@@ -124,7 +123,8 @@ input:checked ~ label span{
 }
 
 input:checked ~ label ul#links-hamburguer li{
-    visibility: visible;
+    display: flex;
+    flex-direction: row-reverse;
     transition: all 0.3s ease;
 }
 
